Fixed choice word wrap height and vertical centering.

--- a/app/assets/stylesheets/embeddable_unit.css.sass
+++ b/app/assets/stylesheets/embeddable_unit.css.sass
@@ -128,14 +128,28 @@ body.statisfy_embed
 
 
     .subtitle
+      position: relative
       text-align: center
       background-color: #EDEFEF
       font-size: 14px
-      line-height: 41px
       font-family: "Roboto", sans-serif
       font-weight: 400
       color: rgb(35, 31, 32)
       margin-top: -2px
+      width: 100%
+      height: 41px
+
+      .table
+        position: absolute
+        display: table
+        width: 100%
+        height: 41px
+
+        .cell
+          display: table-cell
+          vertical-align: middle
+          text-align: center
+          color: rgb(35, 31, 32)
 
     &.selected .subtitle
       color: #D8EBF8
